@@ -165,3 +165,19 @@ hr
   text-align: center;
   font-size: 80%;
 }
+
+.warning
+{
+  border: solid 1px #cccc33;
+  background: #ffffee;
+  padding: 0.5em;
+  border-width: 1px;
+}
+.warning h3
+{
+  margin-top: 0.0em
+}
+.warning p
+{
+  margin-bottom: 0.0em
+}
