@@ -1,3 +1,8 @@
+2008-12-05  Stefan Kost  <ensonic@users.sf.net>
+
+	* style.css:
+	  Hightlight deprecation warnings.
+
 2008-12-04  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtkdoc-mkdb.in:
